Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,7 @@ td {
 
 input {
   width: 100%;
+  height: 20px;
 }
 
 .crown {
